Increase date column width to prevent wrapping.

--- a/wui/css/perso.css
+++ b/wui/css/perso.css
@@ -113,7 +113,7 @@ td + td {
     width: 12em;
 }
 .c-date {
-    width: 7em;
+    width: 8em;
 }
 
 .c-rtype {
